--- a/homework5/src/main/resources/static/home2.html
+++ b/homework5/src/main/resources/static/home2.html
@@ -332,7 +332,7 @@
                     ожидать милый и трогательный роман — Нанато был вынужден уехать со своей матерью!
                 </p>
                 <p>
-                    <a href="#" class="pe-auto">37 глава </a>
+                    <a href="#" class="pe-auto" data-toggle="modal" data-target="#searchModal">37 глава </a>
                 </p>
                 <span class="badge badge-primary">Drama</span>
                 <span class="badge badge-secondary">Romance</span>
@@ -366,7 +366,7 @@
                                     а про другие — вообще слыхом не слыхивал.
                 </p>
                 <p>
-                    <a href="#" class="pe-auto">3 том(complite)</a>
+                    <a href="#" class="pe-auto" data-toggle="modal" data-target="#searchModal">3 том(complite)</a>
                 </p>
                 <span class="badge badge-primary">Drama</span>
                 <span class="badge badge-secondary">Romance</span>
@@ -398,7 +398,7 @@
                     столкнуться с реальностью.
                 </p>
                 <p>
-                    <a href="#" class="pe-auto">7 глава</a>
+                    <a href="#" class="pe-auto" data-toggle="modal" data-target="#searchModal">7 глава</a>
                 </p>
                 <span class="badge badge-primary">Drama</span>
                 <span class="badge badge-secondary">Romance</span>
